# cf-functions-demo

./: .dockerignore  .env-dist  .gitignore  .wrangler.template-custom-route.toml  .wrangler.template-default-zone.toml  .wrangler.template.toml  Cargo.toml  Dockerfile  Justfile  README.md  wrangler.toml
config/: Cargo.toml
config/src/: config.rs  main.rs
config/templates/: wrangler.toml.jinja
migrations/: 0001_example.sql  0002_ddl.sql
src/: lib.rs  routes.rs
src/models/: example.rs
src/routes/: customers.rs  example.rs  root.rs
src/routes/example/: courses.rs  db_scalar_computation.rs  students.rs
