[package]
name = "cf-functions-demo"
version = "0.1.0"
edition = "2021"
authors = [ "EnigmaCurry <ryan@enigmacurry.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["http", "axum", "d1"] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["json"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
serde_json = "1.0.133"
wasm-bindgen = "0.2.99"
